fix overflow issue in enhancement section

--- a/src/components/Enhancements/styles.module.scss
+++ b/src/components/Enhancements/styles.module.scss
@@ -28,7 +28,7 @@ $breakpoints: (
 
 .sectionTitle {
   text-align: center;
-  width: 56rem;
+  max-width: 56rem;
   display: block;
   margin: auto;
 }
